--- a/src/styles/DisplayResult.scss
+++ b/src/styles/DisplayResult.scss
@@ -12,7 +12,7 @@
     color: $blue-4;
     flex-wrap:wrap;
     border: 0.5rem solid $blue-2;
-    box-shadow: 0.7rem 0.7rem $blue-4;
+    box-shadow: 1rem 1rem $blue-4;
 
     background-color:$blue-1;
     padding: 2rem;
@@ -37,6 +37,11 @@
         box-shadow: 0.5rem 0.5rem $blue-4;
         animation: 1.5s oscillate infinite alternate;
     }
+    & p:nth-child(2){
+        font-size: 1.3rem;
+        margin: 1rem 1.3rem;
+    }
+
     & .meme{
         border: 3px solid $blue-2;
         margin-bottom: 1rem;
@@ -54,11 +59,11 @@
 
 .results button{
     color: $blue-4;
-    width: 80%;
-    padding: 0.5rem 1rem;
+    width: 70%;
+    padding: 0.8rem 1rem;
     border-radius: 0.5rem 1rem;
     font-family: 'dogicabold';
-    border: 0.2rem solid $blue-1;
+    border: 0.2rem solid $blue-2;
     box-shadow: 0.3rem 0.3rem $blue-4;
     // border: 5px solid $blue-4;
 
