--- a/src/styles/GameWindow.scss
+++ b/src/styles/GameWindow.scss
@@ -23,7 +23,7 @@
         padding: 0.5rem 1rem;
         background: $blue-4;
         color:white;
-        border: 0.5rem solid $blue-2;
+        border: 0.25rem solid $blue-2;
         border-radius:0.8rem ;
         box-shadow: 0.5rem 0.5rem $blue-4;
     }
