--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -29,12 +29,13 @@
 
 .menu-content{
     width:100%;
+    margin-bottom: 2rem;
     @include flex-center(column);
     gap: 1rem;
 
     button{
         color: $blue-4;
-        width: 80%;
+        width: 70%;
         padding: 0.8rem 1rem;
         border-radius: 0.5rem 1rem;
         border:0;
